# Thermal-Plant-Control-Env

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
context/: 01_hackathon_brief.md  01_hackathon_brief.txt  02_architecture.md  02_architecture.txt  03_hackathon_rules.md  03_hackathon_rules.txt  04_modeling_spec.md  04_modeling_spec.txt  05_inference_spec.md  05_inference_spec.txt  06_tasks_and_graders.md  07_deployment_and_setup.md  07_deployment_and_setup.txt  08_validation_and_testing.md  09_design_constraints.md  10_progress.md  10_progress.md.txt
docs/: graders.md
env/: api.py  core.py  interface.py  state.py  transitions.py
graders/: _metrics.py  registry.py  task1_grader.py  task2_grader.py  task3_grader.py  task4_grader.py
scripts/: deploy_space.sh  evaluate_baseline.py  run_graders_smoke.py  run_local.sh  smoke_test.sh  validate.sh
server/: app.py
tasks/: config.py  registry.py  task1.py  task2.py  task3.py  task4.py
tests/adversarial/: test_malformed_llm_outputs.py
tests/integration/: test_env_api.py  test_inference_loop.py  test_tasks_integration.py
tests/unit/: test_graders.py  test_graders_edgecases.py  test_parser.py  test_state.py  test_submission_contract.py  test_tasks.py  test_transitions.py
utils/: constants.py  helpers.py  logging_utils.py  parser.py  schemas.py
